# DistributedFS

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  setup.sh
config/: distributedfs.conf
src/cpp/include/: crypto_manager.h  storage_engine.h
src/cpp/src/: crypto_manager.cpp  file_manager.cpp  main.cpp  network_server.cpp  storage_engine.cpp  thread_pool.cpp
src/python/: app.py  requirements.txt
tests/cpp/: test_crypto_manager.cpp  test_file_manager.cpp  test_storage_engine.cpp
tests/python/: test_api.py
